# CapsLockLanguageSwitch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.h  resource.rc  toolchain-mingw.cmake
